--- a/PetGame.Repositories/PetGame.Repositories.csproj
+++ b/PetGame.Repositories/PetGame.Repositories.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PetGame.Repositories</RootNamespace>
     <AssemblyName>PetGame.Repositories</AssemblyName>
-    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -46,8 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Impl\IgnoreAttribute.cs" />
+    <Compile Include="Impl\PetTypeRepository.cs" />
     <Compile Include="Impl\Repository.cs" />
+    <Compile Include="Impl\PetRepository.cs" />
+    <Compile Include="IPetTypeRepository.cs" />
+    <Compile Include="IPetRepository.cs" />
     <Compile Include="IUserRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Impl\UserRepository.cs" />
