--- a/PetGame.Tests/packages.config
+++ b/PetGame.Tests/packages.config
@@ -1,8 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Machine.Fakes" version="2.7.0" targetFramework="net45" />
-  <package id="Machine.Fakes.Moq" version="2.7.0" targetFramework="net45" />
-  <package id="Machine.Specifications" version="0.11.0" targetFramework="net45" />
-  <package id="Machine.Specifications.Should" version="0.11.0" targetFramework="net45" />
-  <package id="Moq" version="4.2.1507.0118" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
 </packages>
