--- a/PetGame.Tests/PetGame.Tests.csproj
+++ b/PetGame.Tests/PetGame.Tests.csproj
@@ -56,8 +56,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="PetOps\when_updating_a_pet_status_hunger.cs" />
-    <Compile Include="PetOps\when_creating_a_pet.cs" />
+    <Compile Include="EntityFactory.cs" />
+    <Compile Include="AnimalOps\when_feeding_an_animal.cs" />
+    <Compile Include="AnimalOps\when_updating_an_animals_status_hunger.cs" />
+    <Compile Include="AnimalOps\when_managing_an_animal.cs" />
     <Compile Include="UserOps\when_validating_a_new_user.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
