--- a/PetGame.Models/PetGame.Models.csproj
+++ b/PetGame.Models/PetGame.Models.csproj
@@ -47,8 +47,8 @@
   <ItemGroup>
     <Compile Include="ApiResponse.cs" />
     <Compile Include="RepoIgnoreAttribute.cs" />
-    <Compile Include="Pet.cs" />
-    <Compile Include="PetType.cs" />
+    <Compile Include="Animal.cs" />
+    <Compile Include="AnimalType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
