--- a/PetGame.Repositories/PetGame.Repositories.csproj
+++ b/PetGame.Repositories/PetGame.Repositories.csproj
@@ -46,9 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Impl\PetTypeRepository.cs" />
+    <Compile Include="Impl\AnimalTypeRepository.cs" />
     <Compile Include="Impl\Repository.cs" />
-    <Compile Include="Impl\PetRepository.cs" />
+    <Compile Include="Impl\AnimalRepository.cs" />
     <Compile Include="IPetTypeRepository.cs" />
     <Compile Include="IPetRepository.cs" />
     <Compile Include="IUserRepository.cs" />
