--- a/PetGame/Web.config
+++ b/PetGame/Web.config
@@ -1,9 +1,15 @@
 <?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="PetGameDb"
+    <!--<add name="PetGameDb"
       connectionString="Server=tcp:petgame.database.windows.net,1433;Initial Catalog=PetGameDb;Persist Security Info=False;User ID=ed;Password=SQL_prolifer8;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      providerName="System.Data.SqlClient"/>-->
+
+    <add name="PetGameDb"
+      connectionString="Initial Catalog=PetGameDb;Data Source=(localdb)\MSSQLLocalDB;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True"
       providerName="System.Data.SqlClient"/>
+
+    
   </connectionStrings>
   <appSettings/>
   <!--
