--- a/PetGame.Services/PetGame.Services.csproj
+++ b/PetGame.Services/PetGame.Services.csproj
@@ -44,7 +44,7 @@
     <Compile Include="IGameService.cs" />
     <Compile Include="Impl\GameService.cs" />
     <Compile Include="ISysTime.cs" />
-    <Compile Include="Ops\PetOps.cs" />
+    <Compile Include="Ops\AnimalOps.cs" />
     <Compile Include="Ops\UserOps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Impl\SysTime.cs" />
